src/snapshots/match_box__test__bindings.snap
---
source: src/test.rs
expression: "snapshot! { match () { a @ mb!(&**b @ ()) => {}, _ => panic!(), } }"
---
fn main() {
    match () {
        a @ a0 if {
            #[allow(unused_variables)]
            {
                #[allow(clippy::match_like_matches_macro)]
                if let b @ () = &**a0 { true } else { false }
            }
        } => {
            #[allow(clippy::match_like_matches_macro)]
            if let b @ () = &**a0 {
                {}
            } else {
                ::core::panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        _ => panic!(),
    }
}
