src/snapshots/match_box__test__guards-2.snap
---
source: src/test.rs
expression: "snapshot! { match () { x if x == x => () } }"
---
fn main() {
    match () {
        x if x == x => {}
    }
}
