src/snapshots/match_box__test__guards.snap
---
source: src/test.rs
expression: "snapshot! { match () { mb!(&**x) if x == x => () } }"
---
fn main() {
    match () {
        a0 if {
            #[allow(unused_variables)] if let x = &**a0 { x == x } else { false }
        } => {
            if let x = &**a0 {
                ()
            } else {
                ::core::panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
