src/snapshots/match_box__test__other-3.snap
---
source: src/test.rs
expression: "snapshot!\n{ match Box::new(Box::new(5)) { mb!(&**mb!(&**x)) => x, _ => panic!() } }"
---
fn main() {
    match Box::new(Box::new(5)) {
        a1 if {
            #[allow(unused_variables)]
            {
                #[allow(clippy::match_like_matches_macro)]
                if let a0 = &**a1 {
                    {
                        #[allow(clippy::match_like_matches_macro)]
                        if let x = &**a0 { true } else { false }
                    }
                } else {
                    false
                }
            }
        } => {
            #[allow(clippy::match_like_matches_macro)]
            if let a0 = &**a1 {
                {
                    #[allow(clippy::match_like_matches_macro)]
                    if let x = &**a0 {
                        x
                    } else {
                        ::core::panic!(
                            "Two invocations of Deref::deref returned different outputs on same inputs",
                        )
                    }
                }
            } else {
                ::core::panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        _ => panic!(),
    }
}
