src/snapshots/match_box__test__other-4.snap
---
source: src/test.rs
expression: "snapshot! { match &Rc::new(Nil) { mb!(&**_) => a0, _ => panic!() } }"
---
fn main() {
    match &Rc::new(Nil) {
        a0 if {
            #[allow(unused_variables)]
            {
                #[allow(clippy::match_like_matches_macro)]
                if let _ = &**a0 { true } else { false }
            }
        } => {
            #[allow(clippy::match_like_matches_macro)]
            if let _ = &**a0 {
                a0
            } else {
                ::core::panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
        _ => panic!(),
    }
}
