src/snapshots/match_box__test__other.snap
---
source: src/test.rs
expression: "snapshot! { match () { mb!(&**x) => () } }"
---
fn main() {
    match () {
        a0 if {
            #[allow(unused_variables)]
            {
                #[allow(clippy::match_like_matches_macro)]
                if let x = &**a0 { true } else { false }
            }
        } => {
            #[allow(clippy::match_like_matches_macro)]
            if let x = &**a0 {
                ()
            } else {
                ::core::panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
